<resources>
    <string name="app_name">Visita</string>
    <string name="skip_title">Skip</string>
    <string name="create_account">Create Account</string>
    <string name="new_user">Create Account?</string>
    <string name="login_facebook">Continue with facebook</string>
    <string name="password_login">Password</string>
    <string name="password_old">Current Password</string>
    <string name="password_login_new">New Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="forget_password_title">Forget Password</string>
    <string name="Email_login">Email address</string>
    <string name="send_password">Send Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="or">Or</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="update">Update</string>
    <string name="firstname">First name</string>
    <string name="fullname">Full name</string>
    <string name="track_route">Track Route</string>
    <string name="request_details">Request Details</string>
    <string name="phone">Mobile Phone</string>
    <string name="price">Price</string>
    <string name="price_title">Price(KWD)</string>
    <string name="job_type">Job Type</string>
    <string name="skip">Skip</string>
    <string name="arabic">ع</string>
    <string name="english">EN</string>
    <string name="have_account">Have an account?</string>
    <string name="now">now</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="report">Report</string>
    <string name="alert">Alert</string>
    <string name="order">Orders</string>
    <string name="order_title">Order</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact us</string>
    <string name="email_us">Email us</string>
    <string name="version">Version:</string>
    <string name="email_address_value">Info@info.com</string>
    <string name="send_email">Send Email</string>
    <string name="call_msg">Make a call?</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="show_list">Show My Items</string>
    <string name="add_item">Add new Item</string>
    <string name="setting">Setting</string>
    <string name="add">Add</string>
    <string name="kwd">KWD</string>
    <string name="day">Day</string>
    <string name="hour">Hr</string>
    <string name="minute">Min</string>
    <string name="second">Sec</string>
    <string name="day_tile">Days</string>
    <string name="hour_title">Hours</string>
    <string name="minute_title">Minutes</string>
    <string name="second_title">Seconds</string>
    <string name="day_tile2">Day</string>
    <string name="hour_title2">Hour</string>
    <string name="minute_title2">Minute</string>
    <string name="second_title2">Second</string>
    <string name="search_item">Search item</string>
    <string name="area">Area</string>
    <string name="category_title">Category</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="filter">Filter</string>
    <string name="current_location">Current Location</string>
    <string name="address">Address</string>
    <string name="login_as">Login as:</string>
    <string name="type">Type:</string>
    <string name="guest">Guest</string>
    <string name="employee">Employee</string>
    <string name="create_guest_account">Create Guest Account</string>
    <string name="create_employee_account">Create Employee Account</string>
    <string name="register_guest">Register as Guest</string>
    <string name="register_employee">Register as Employee</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="babysitter">Babysitter(Nany)</string>
    <string name="physiotherapy">Physiotherapy</string>
    <string name="nursing">Nursing</string>
    <string name="choose_service">Choose Service</string>
    <string name="recommend">Recommendation</string>
    <string name="complete_order">Complete Orders</string>
    <string name="incomplete_order">InComplete Orders</string>
    <string name="add_request">Add Request</string>
    <string name="submit">Submit</string>
    <string name="customer_type">Customer Type:</string>
    <string name="request_desc">Request description</string>
    <string name="request_datetime">Select date and time .</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="make_call">You want make a call?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_report">Add Report</string>
    <string name="max_price">Enter max price</string>
    <string name="failed">Failed</string>
    <string name="waiting">Waiting</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="started">Started</string>
    <string name="finished">Finished</string>
    <string name="request">Request</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="start_order">Start Order</string>
    <string name="finish_order">Finish Order</string>

    <!--Toast Msg!-->
    <string name="email_empty">Please Enter Email Address</string>
    <string name="email_input_matching">please enter valid email</string>
    <string name="enter_empty_data">Fill empty data</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="enter_valid_password">Password must be 6 characters at least</string>
    <string name="enter_name_search">Enter fullname or part of name</string>
    <string name="enter_report">Enter final service Report to finish the request.</string>
    <string name="old_password_error">Old Password is incorrect</string>
    <string name="email_unique">Email address already been used</string>
    <string name="invalid_data">Invalid Email Address or Password</string>
    <string name="choose_valid_type">Choose your type</string>
    <string name="coudlnt_complete_process">Couldn\'t complete the process,please try again</string>
    <string name="no_internet_connectioon">No Internet Connection</string>
    <string name="sign_in_cancel">Process Canceled</string>
    <string name="pasword_not_same">Password and Confirm Password must be same</string>
    <string name="no_data">No data found</string>
    <string name="about_description">The application aims to help people in ordering Nurse,BaySitters(Nany) or Physiotherapy.</string>
    <string name="use_camera_msg">Now You Can use Camera</string>
    <string name="unuse_camera_msg">You Can not use Camera</string>
    <string name="no_message">No messages found</string>
    <string name="please_wait">Please wait...</string>
    <string name="register_done">Register Done</string>
    <string name="update_done">Update Profile Done</string>
    <string name="request_done">Request Sent Done</string>
    <string name="request_finish_done">Request Finished :)</string>
    <string name="welcome">Welcome back</string>
    <string name="start_request_message">Please don\'t forget to start the request on time to complete the process</string>
    <string name="finish_request_message">Please don\'t forget to finish the order at end to get money and rate</string>
    <string name="thanks_feedback">Thanks for your time :)</string>
    <string name="enter_message">Write your message(Optional)</string>
    <string name="employee_trac_failed">No Route Found yet</string>
    <string name="sent_request_msg">Sent a request to you</string>


    <string-array name="job_type">
        <item>Nursing</item>
        <item>Physiotherapy</item>
        <item>Babysitter(Nany)</item>
    </string-array>

</resources>
