<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/lyContainer"
    android:background="@color/white">
    <include layout="@layout/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:header="@{1}"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/lyHeaderContainer"/>
    <ScrollView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/lyScroll">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentTop="true"
                    android:id="@+id/lyData"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:layout_gravity="center"
                    android:padding="20dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:id="@+id/lyEmail"
                        android:descendantFocusability="beforeDescendants"
                        android:focusableInTouchMode="true"
                        android:background="@drawable/input_style_bg"
                        android:theme="@style/textStyle"
                        android:gravity="center">

                        <com.emergency.app.views.CustomEditText
                            android:id="@+id/edtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@android:color/transparent"
                            android:inputType="textEmailAddress"
                            android:gravity="start|center"
                            android:hint="@string/Email_login"
                            android:padding="5dp"
                            android:layout_marginStart="3dp"
                            android:layout_marginEnd="3dp"
                            android:textSize="16sp"
                            android:textColor="@color/black"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:id="@+id/lyPassword"
                        android:background="@drawable/input_style_bg"
                        android:theme="@style/textStyle"
                        android:descendantFocusability="beforeDescendants"
                        android:focusableInTouchMode="true"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorPrimary"
                        android:gravity="center">

                        <com.emergency.app.views.CustomEditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@android:color/transparent"
                            android:inputType="textPassword"
                            android:gravity="start|center"
                            android:hint="@string/password_login"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:layout_marginStart="3dp"
                            android:layout_marginEnd="3dp"
                            android:textSize="16sp"
                            android:textColor="@color/black"/>
                    </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lyType"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:weightSum="1">
            <com.emergency.app.views.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="@string/login_as"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:id="@+id/tvLoginType"/>
            <com.emergency.app.views.CustomRadioButon
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guest"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/rbGuest"/>
            <com.emergency.app.views.CustomRadioButon
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/employee"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/rbEmployee"/>
        </RadioGroup>
                    <com.emergency.app.views.CustomAppButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/btnLogin"
                        android:textSize="20sp"
                        android:padding="10dp"
                        android:layout_marginBottom="15dp"
                        android:textAllCaps="false"
                        android:background="@drawable/ripple_bg_style"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/lyDivider"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp"
                        android:weightSum="1">
                        <View
                            android:layout_width="0dp"
                            android:layout_height="2dp"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:background="@color/gray_line"
                            android:layout_weight=".3"
                            android:layout_gravity="center"
                            android:id="@+id/lineDiv1"/>

                        <com.emergency.app.views.CustomTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="8dp"
                            android:layout_weight=".4"
                            android:gravity="center"
                            android:text="@string/or"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp"
                            android:id="@+id/tvOR"/>
                        <View
                            android:layout_width="0dp"
                            android:layout_height="2dp"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:background="@color/gray_line"
                            android:layout_weight=".3"
                            android:layout_gravity="center"
                            android:id="@+id/lineDiv2"/>
                    </LinearLayout>



                <com.emergency.app.views.CustomAppButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btnGuestRegister"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:layout_marginBottom="15dp"
                    android:textAllCaps="false"
                    android:background="@drawable/ripple_bg_style"
                    android:text="@string/create_guest_account"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center"/>

                    <com.emergency.app.views.CustomAppButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/btnEmployeeRegister"
                        android:textSize="20sp"
                        android:padding="10dp"
                        android:textAllCaps="false"
                        android:background="@drawable/ripple_bg_style"
                        android:text="@string/create_employee_account"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:gravity="center"/>

                </LinearLayout>
            </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>